--- a/list-2-2.html
+++ b/list-2-2.html
@@ -209,7 +209,7 @@ $(document).ready(function() {
 <li><a href="https://p.linji.cn" target="_blank">导航</a></li>
 <li><a href="https://linji.cn/file/" target="_blank">网盘</a></li>
 <li><a href="https://jz.linji.cn/" target="_blank">记帐</a></li>
-<li><a href="https://m.linji.cn/" target="_blank">朋友圈</a></li><li><a href="javascript:void(0);" onclick="openLogin1()">登录</a></li>      </ul>   
+<li><a href="http://m.linji.cn/" target="_blank">朋友圈</a></li><li><a href="javascript:void(0);" onclick="openLogin1()">登录</a></li>      </ul>   
       </div>
 </div>
 <div class="other-wrap collapse">
@@ -362,7 +362,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2024-08-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1243) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1380) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -373,7 +373,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2024-07-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1047) <a href="/b2/940.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1177) <a href="/b2/940.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -384,7 +384,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2024-07-21 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1038) <a href="/b2/939.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1172) <a href="/b2/939.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -395,7 +395,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2024-02-01 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1128) <a href="/b2/899.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1262) <a href="/b2/899.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -406,7 +406,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2024-01-10 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(730) <a href="/b2/888.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(843) <a href="/b2/888.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -420,7 +420,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-12-20 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(837) <a href="/b2/880.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(986) <a href="/b2/880.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -431,7 +431,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-10-27 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(818) <a href="/b2/872.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(948) <a href="/b2/872.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -443,7 +443,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-07-13 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1250) <a href="/b2/864.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1406) <a href="/b2/864.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -454,7 +454,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-06-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1913) <a href="/b2/860.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2079) <a href="/b2/860.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -465,7 +465,7 @@ document.body.addEventListener('input', POWERMODE);
 	  <div class="meta">
 	  <p class="time">2023-05-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1846) <a href="/b2/857.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2013) <a href="/b2/857.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -508,7 +508,7 @@ document.body.addEventListener('input', POWERMODE);
 
 <a target="_blank" href="https://v3.dconline.net.cn" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
-<span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
+<span class="unget" title="">6</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
 </a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://v3.dconline.net.cn" title="">专业课</a></p>
 
 </div>
@@ -517,8 +517,8 @@ document.body.addEventListener('input', POWERMODE);
 
 <a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
-<span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/30</strong>
-</a><p style="font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;font-weight: 100;" title=""><a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title="">公需课</a></p>
+<span class="unget" title="">30</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/30</strong>
+</a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title="">公需课</a></p>
 
 </div>
 
@@ -527,7 +527,7 @@ document.body.addEventListener('input', POWERMODE);
 <a target="_blank" href="https://v3.lt-edu.net" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
 <span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/18</strong>
-</a><p style="font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;font-weight: 100;" title=""><a target="_blank" href="https://v3.lt-edu.net" title="">选修课</a></p>
+</a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://v3.lt-edu.net" title="">选修课</a></p>
 
 </div>
 </div>
@@ -1074,4 +1074,4 @@ jQuery(document).ready(function($){
 </script></div>
 
 </body>
-</html>>
+</html>
