--- a/list-2.html
+++ b/list-2.html
@@ -209,7 +209,7 @@ $(document).ready(function() {
 <li><a href="https://p.linji.cn" target="_blank">导航</a></li>
 <li><a href="https://linji.cn/file/" target="_blank">网盘</a></li>
 <li><a href="https://jz.linji.cn/" target="_blank">记帐</a></li>
-<li><a href="https://m.linji.cn/" target="_blank">朋友圈</a></li><li><a href="javascript:void(0);" onclick="openLogin1()">登录</a></li>      </ul>   
+<li><a href="http://m.linji.cn/" target="_blank">朋友圈</a></li><li><a href="javascript:void(0);" onclick="openLogin1()">登录</a></li>      </ul>   
       </div>
 </div>
 <div class="other-wrap collapse">
@@ -364,7 +364,7 @@ document.body.addEventListener('input', POWERMODE);
 			<div class="dataBl" style="display: inline-block;text-align: center;width: 28%;border-right: 1px solid rgba(0, 0, 0, 0.15);" title="">
                             <strong style="font-size: 26px;font-weight: 600;color: #ff7505;" title="">
 
-			    <span class="unget" title="">0</span></strong><strong style="font-size: 26px;font-weight: 600;" title="">/42</strong>
+			    <span class="unget" title="">6</span></strong><strong style="font-size: 26px;font-weight: 600;" title="">/42</strong>
 
                             <p style="font: 22px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;text-indent: 0px;text-align: center;" title="">专业课</p>
                         </div>
@@ -372,7 +372,7 @@ document.body.addEventListener('input', POWERMODE);
                         <div class="dataBl" style="display: inline-block;width: 28%;border-right: 1px solid rgba(0, 0, 0, 0.15);padding-bottom: 10px;" title="">
                             <strong style="font-size: 26px;font-weight: 600;color: #ff7505;" title="">
 
-			    <span class="unget" title="">0</span></strong><strong style="font-size: 26px;font-weight: 600;" title="">/30</strong>
+			    <span class="unget" title="">30</span></strong><strong style="font-size: 26px;font-weight: 600;" title="">/30</strong>
 
                             <p style="font: 22px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;text-indent: 0px;text-align: center;" title="">公需课</p>
                         </div>
@@ -518,7 +518,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  <span class="ico">顶</span>	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6952999) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(7102060) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
 	 
 	</p></div></div> 
 	 
@@ -529,7 +529,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-03-18 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(379) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(679) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -540,7 +540,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-01-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(684) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(831) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -554,7 +554,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-12-12 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(792) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(940) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -570,7 +570,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-11-25 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(703) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(930) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -581,7 +581,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-09-05 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(981) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1136) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -592,7 +592,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(892) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1046) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -603,7 +603,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1190) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1354) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -614,7 +614,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(891) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1087) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -625,7 +625,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-17 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4167) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4582) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -668,7 +668,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 
 <a target="_blank" href="https://v3.dconline.net.cn" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
-<span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
+<span class="unget" title="">6</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/42</strong>
 </a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://v3.dconline.net.cn" title="">专业课</a></p>
 
 </div>
@@ -677,8 +677,8 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 
 <a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
-<span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/30</strong>
-</a><p style="font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;font-weight: 100;" title=""><a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title="">公需课</a></p>
+<span class="unget" title="">30</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/30</strong>
+</a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://jsglpt.gdedu.gov.cn/" title="">公需课</a></p>
 
 </div>
 
@@ -687,7 +687,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 <a target="_blank" href="https://v3.lt-edu.net" title=""><strong style="font-size: 18px;font-weight: 600;color: #ff7505;" title="">
 
 <span class="unget" title="">0</span></strong><strong style="font-size: 18px;font-weight: 600;" title="">/18</strong>
-</a><p style="font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;font-weight: 100;" title=""><a target="_blank" href="https://v3.lt-edu.net" title="">选修课</a></p>
+</a><p style="font-weight: 100;font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;color: #353a55;" title=""><a target="_blank" href="https://v3.lt-edu.net" title="">选修课</a></p>
 
 </div>
 </div>
@@ -1234,4 +1234,4 @@ jQuery(document).ready(function($){
 </script></div>
 
 </body>
-</html>ml>
+</html>
